<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16">

    <ImageView
        android:id="@+id/instagram_logo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/instaphoto"></ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instagram_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_12"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullname_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_text_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_12"
        android:hint="@string/fullname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname_text_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_12"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passsword_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_text_input_layout"
        android:layout_marginTop="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_12"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/font_20"
        app:cornerRadius="@dimen/spacing_6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="8">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="4"
            android:background="@color/bgColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_2"
            android:text="HOẶC"
            android:textSize="@dimen/font_16_subtitle"></TextView>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="4"
            android:background="@color/bgColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_account"></TextView>

        <TextView
            android:id="@+id/txt_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_4"
            android:clickable="true"
            android:text="@string/sign_in"
            android:textColor="@color/blue_900"></TextView>
    </LinearLayout>

</LinearLayout>