<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_app_main">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/item_plus_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_plus_add_black_24dp"></ImageView>

                <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:text="Username"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_18_title"
                    android:textStyle="bold"></TextView>

                <ImageView
                    android:id="@+id/item_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/spacing_8"
                    android:src="@drawable/ic_menu_black_24dp"></ImageView>
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgColor" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_10">

                <de.hdodenhof.circleimageview.CircleImageView
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="3dp"
                    android:id="@+id/img_profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@mipmap/ic_launcher"></de.hdodenhof.circleimageview.CircleImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacing_10"
                            android:gravity="center"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/txt_post_counts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="3.959"
                                android:textColor="@color/black"
                                android:textSize="@dimen/font_20"
                                android:textStyle="bold"></TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/posts"
                                android:textSize="@dimen/font_12">

                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/txt_follower_counts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacing_10"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8.936"
                                android:textColor="@color/black"
                                android:textSize="@dimen/font_20"
                                android:textStyle="bold"></TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textSize="@dimen/font_12">

                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacing_10"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_following_counts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="443"
                                android:textColor="@color/black"
                                android:textSize="@dimen/font_20"
                                android:textStyle="bold"></TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textSize="@dimen/font_12">

                            </TextView>
                        </LinearLayout>
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_marginVertical="@dimen/spacing_4"
                        android:gravity="center"
                        android:text="Edit Profile"
                        android:textColor="@color/white"
                        android:textStyle="bold"></com.google.android.material.button.MaterialButton>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/spacing_10"
                android:paddingBottom="@dimen/spacing_10">

                <TextView
                    android:id="@+id/txt_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your bio goes here\nand here too..."
                    android:textColor="@color/black"></TextView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bgColor" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>